[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "docx>=0.2.4",
    "flask-sqlalchemy>=3.1.1",
    "flask>=3.1.0",
    "openai>=1.59.6",
    "psycopg2-binary>=2.9.10",
    "email-validator>=2.2.0",
    "gunicorn>=23.0.0",
    "python-docx>=1.1.2",
    "reportlab>=4.2.5",
    "flask-login>=0.6.3",
    "flask-mail>=0.10.0",
    "flask-wtf>=1.2.2",
    "pyjwt>=2.10.1",
    "werkzeug>=3.1.3",
    "wtforms>=3.2.1",
    "requests>=2.32.3",
    "python-pptx>=1.0.2",
    "sqlalchemy>=2.0.37",
    "anthropic>=0.45.2",
]
